# song-history

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  GETTING_STARTED.md  Makefile  QUICK_REFERENCE.sh  README.md  RELEASING.md  compose.yml  demo.sh  pyproject.toml  sbom-baseline.txt  spec.md
.claude/agents/: cli-contract-tester.md  senior-qa-engineer.md  web-ux-tester.md
.claude/hooks/: stop-qa-gate.sh
.codex/: hooks.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: reporting.yml
data/: library_index.json
deploy/pi/: .env.example  docker-compose.yml  init.sh  worship-catalog.service
deploy/pi/firewall/: docker-user-firewall.service  docker-user-firewall.sh  ufw-setup.sh
deploy/pi/promtail/: config.yml
deploy/pi/scripts/: prepare-promtail-log-access.sh
deploy/pi/ssh/: 00-hardening.conf
deploy/pi/systemd/: promtail-log-access.path  promtail-log-access.service
deploy/pi/traefik/: traefik.yml
docs/: code-review-config.md  code-review-history.md  data-cleanup.md  library-index.md  mutation-testing.md  pi-deploy.md  runbook-restore.md  sprint-plan.md  windows-auto-submit.md
graphify-out/: .graphify_analysis.json  GRAPH_REPORT.md  graph.json
scripts/: Submit-WorshipSlides.env.example  Submit-WorshipSlides.ps1  backup.sh  failure_tracker.py  import-new.sh  seed-pi-db.sh
src/worship_catalog/: __init__.py  cli.py  db.py  extractor.py  import_service.py  library.py  log_config.py  normalize.py  notify.py  ocr.py  pptx_reader.py  release.py  service_slots.py
src/worship_catalog/services/: __init__.py  missing_services_report.py  report_service.py
src/worship_catalog/web/: app.py  csrf.py
src/worship_catalog/web/static/: nav.js  reports.js  upload.js
src/worship_catalog/web/templates/: 404.html  500.html  _error.html  _missing_services_result.html  _pagination_inner.html  _services_results.html  _songs_results.html  about.html  base.html  ccli_preview.html  leader_top_songs.html  leaders.html  missing_services.html  reports.html  service_detail.html  services.html  services_rows.html  song_detail.html  songs.html  songs_rows.html  stats_result.html  upload.html
tests/: conftest.py  test_accessibility.py  test_backup_restore.py  test_backup_sh.py  test_ci_config.py  test_cli.py  test_credits_parsing.py  test_db_integration.py  test_dockerfile.py  test_e2e_htmx.py  test_e2e_imports.py  test_e2e_playwright.py  test_extraction_integration.py  test_extractor_unit.py  test_import_service.py  test_import_sh.py  test_library.py  test_log_config.py  test_markers.py  test_missing_services_report.py  test_notify.py  test_ocr.py  test_ocr_provider.py  test_pi_compose.py  test_pi_deploy_doc.py  test_pi_hardening.py  test_pi_init_sh.py  test_pi_systemd.py  test_pptx_reader_unit.py  test_promtail_log_access_sh.py  test_publisher_detection.py  test_release_versioning.py  test_report_service.py  test_score_image_extraction.py  test_scripts.bats  test_scripts_sigterm.py  test_seed_pi_db_sh.py  test_title_normalize.py  test_uat_acceptance.py  test_web.py  (+1 more)
tests/fixtures/: AM_Worship_2026.02.15.expected.json  build_chorus_repeat_service.py  build_sample_service.py  build_self_titled_nonsong_service.py  chorus_repeat_service.expected.json  chorus_repeat_service.pptx  sample_service.expected.json  sample_service.pptx  self_titled_nonsong_service.pptx
