[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worship-catalog"
version = "0.1.0"
description = "Extract song metadata from PowerPoint worship slide decks, store in SQLite, generate CCLI reports"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Matt Shirel", email = "matt@example.local"}
]

dependencies = [
    "python-pptx>=0.6.21",
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ocr = [
    "anthropic>=0.40",
]
web = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "starlette-csrf>=3.0",
]
excel = [
    "openpyxl>=3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "starlette>=0.36",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worship_catalog"]

[tool.hatch.build]
include = [
    "src/worship_catalog/**",
]

[project.scripts]
worship-catalog = "worship_catalog.cli:main"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# anthropic SDK uses deeply nested union types that aren't worth fighting;
# the code is correct at runtime — suppress all mypy errors in this module
module = "worship_catalog.ocr"
ignore_errors = true

[[tool.mypy.overrides]]
# sqlite3.Row/cursor.lastrowid typing is imprecise; relax return checks in db layer
module = "worship_catalog.db"
warn_return_any = false
disable_error_code = ["return-value", "type-arg"]

[[tool.mypy.overrides]]
# python-pptx has no type stubs; all errors in this module are pptx-related cascades
module = "worship_catalog.pptx_reader"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["pptx", "pptx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Library scraper uses subprocess/OLE; relax return type checking
module = "worship_catalog.library"
warn_return_any = false

[tool.bandit]
skips = [
    # B603: subprocess called with a list of args (no shell=True) — this IS the safe pattern.
    #       The risk is B602 (shell=True). B603 is a low-severity reminder only.
    "B603",
    # B608: both dynamic SQL sites were reviewed and confirmed safe:
    #   - db.py query_copy_events: {placeholders} is only '?,?,?' — values are parameterized
    #   - web/app.py _query_all_services: {order}/{where_sql} built from whitelist-validated
    #     column names and fixed SQL fragments; no user input is interpolated directly
    "B608",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=src/worship_catalog --cov-report=term-missing --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
]
