[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "worship-catalog"
dynamic = ["version"]
description = "Extract song metadata from PowerPoint worship slide decks, store in SQLite, generate CCLI reports"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Matt Shirel", email = "matt@example.local"}
]

dependencies = [
    "python-pptx>=0.6.21,<2",
    "click>=8.0,<9",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
ocr = [
    "anthropic>=0.40,<1",
]
web = [
    "fastapi>=0.110,<1",
    "jinja2>=3.1,<4",
    "uvicorn>=0.27,<1",
    "python-multipart>=0.0.9,<1",
    "starlette-csrf>=3.0,<4",
]
excel = [
    "openpyxl>=3.1,<4",
]
library = [
    "olefile>=0.47,<1",
]
dev = [
    "pytest>=7.0,<10",
    "pytest-cov>=4.0,<8",
    "ruff>=0.1,<1",
    "mypy>=1.0,<2",
    "types-PyYAML>=6.0,<7",
    "httpx>=0.27,<1",
    "fastapi>=0.110,<1",
    "starlette>=0.36,<1",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "olefile>=0.47,<1",
    "openpyxl>=3.1,<4",
    "mutmut>=2.4,<4",
    "playwright>=1.40,<2",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+unknown"  # used when .git is not in the build context (e.g. Docker)

[tool.hatch.build.targets.wheel]
packages = ["src/worship_catalog"]

[tool.hatch.build]
include = [
    "src/worship_catalog/**",
]

[project.scripts]
worship-catalog = "worship_catalog.cli:main"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# anthropic is an optional runtime dependency (import-not-found when absent).
# The **request_kwargs unpacking pattern is correct at runtime but the SDK's
# deeply overloaded create() can't be statically verified (call-overload). (#71)
module = "worship_catalog.ocr"
disable_error_code = ["import-not-found", "call-overload"]

[[tool.mypy.overrides]]
# sqlite3.Row/cursor.lastrowid typing is imprecise; relax return checks in db layer
module = "worship_catalog.db"
warn_return_any = false
disable_error_code = ["return-value", "type-arg"]

[[tool.mypy.overrides]]
# python-pptx has no type stubs; pptx.* cascade errors handled with targeted
# type: ignore comments in pptx_reader.py (#71)
module = "worship_catalog.pptx_reader"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["pptx", "pptx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["olefile", "olefile.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Library scraper uses subprocess/OLE; relax return type checking
module = "worship_catalog.library"
warn_return_any = false

[tool.bandit]
skips = [
    # B603: subprocess called with a list of args (no shell=True) — this IS the safe pattern.
    #       The risk is B602 (shell=True). B603 is a low-severity reminder only.
    "B603",
    # B608: both dynamic SQL sites were reviewed and confirmed safe:
    #   - db.py query_copy_events: {placeholders} is only '?,?,?' — values are parameterized
    #   - web/app.py _query_all_services: {order}/{where_sql} built from whitelist-validated
    #     column names and fixed SQL fragments; no user input is interpolated directly
    "B608",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mutmut]
paths_to_mutate = [
    "src/worship_catalog/normalize.py",
    "src/worship_catalog/extractor.py",
]
tests_dir = ["tests/"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
    "e2e: end-to-end Playwright tests — require a running server; skip with -m 'not e2e'",
]
